Parse the nextUrl parameter with URI instead of URL so that chrome: URIs can be used for redirection. This should simplify the login process for Firefox extensions.